--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -331,8 +331,7 @@
 
                                       <h2>Seems your record has not been linked or might not exist</h2>
                                       <h3>
-                                          Ooops! seems your QR code/vaccination ID has not been linked properly.
-                                          Don't worry, try searching with your vaccination ID or visit your vaccination site.
+                                          Try searching with your vaccination ID or visit your vaccination site.
                                       </h3>
 
 
