--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -14,9 +14,6 @@
     <meta property="og:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png">
     <meta property="twitter:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png"  />
 
-
-
-
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -107,9 +104,9 @@
         <div class="container pos-vertical-center">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="h1--large">Server Error</h1>
+                    <h1 class="h1--large">SERVER ERROR</h1>
                     <p class="lead">
-                       You shouldnt see this page. please call: 0700 220 1122
+                      Please call: 0700 220 1122
                     </p>
                     <a href="/">Go back to home page</a>
                 </div>
