--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -92,8 +92,8 @@
                 <div class="col-lg-1 col-md-2 hidden-xs">
                     <div class="bar__module">
                         <a href="/">
-                            <img class="logo logo-dark" alt="logo" src="https://res.cloudinary.com/moversng/image/upload/v1615834668/ED_1_lldja0.svg" />
-                            <img class="logo logo-light" alt="logo" src="https://res.cloudinary.com/moversng/image/upload/v1615834668/ED_1_lldja0.svg" />
+                            <img class="logo logo-dark" alt="logo" src="img/logo_nphcda_main.svg" />
+                            <img class="logo logo-light" alt="logo" src="img/logo_nphcda_main.svg" />
                         </a>
                     </div>
                     <!--end module-->
