--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -40,6 +40,7 @@
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
 
 
 
@@ -52,6 +53,8 @@
 
             gtag('config', 'G-15JGRP7GF5');
         </script>
+
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=616bfbb638f8310012c866ef&product=sticky-share-buttons" async="async"></script>
         <style>
             .pending{
                 background-color: darkred;
@@ -114,19 +117,7 @@
 
                       <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                           <div class="bar__module">
-                              <ul class="menu-horizontal text-left">
-                                  <li style="border-bottom: 0.5px solid #28a745">
-                                      <span class="text-dark"><a target="_blank" href="https://publicreg.vaccination.gov.ng/" style="text-underline: none; color: #28a745">Registration</a></span>
 
-                                      <!--end dropdown container-->
-                                  </li>
-                                  <li style="border-bottom: 0.5px solid #28a745" >
-                                      <span class="text-dark"> <a  href="/faq" style="text-underline: none; color: #28a745" >FAQs </a></span>
-
-                                      <!--end dropdown container-->
-                                  </li>
-
-                              </ul>
                           </div>
                       </div>
 
@@ -283,6 +274,17 @@
 
 
 
+                                    <div class="sharethis-inline-share-buttons"></div>
+
+                                    <div class="card__bottom text-center">
+
+                                        <!-- ShareThis BEGIN -->
+                                        <!-- ShareThis END -->
+
+
+                                    </div>
+
+
                                     <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
 
 
@@ -315,7 +317,11 @@
 
 
 
+
                                 </div>
+
+
+
 
                               <div class="row justify-content-center" th:if="${verifiedrecord == null && validatationinfo==null}" >
 
