--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -12,9 +12,8 @@
     <meta property="og:url" content="https://verification.vaccination.gov.ng/">
     <meta property="og:description" content="Nigeria's Official vaccination website">
     <meta property="og:type" content="article">
-        <meta property="og:image" content="img/intro_nphcda.png">
-        <meta property="twitter:image" content="img/intro_nphcda.png"  />
-
+        <meta property="og:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png">
+        <meta property="twitter:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png"  />
 
 
         <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
