--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -11,9 +11,8 @@
     <meta property="og:url" content="https://verification.vaccination.gov.ng/">
     <meta property="og:description" content="Nigeria's Official vaccination website">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png">
-    <meta property="twitter:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png"  />
-
+    <meta property="og:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png">
+    <meta property="twitter:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png"  />
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
