--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -10,9 +10,8 @@
     <meta property="og:url" content="https://verification.vaccination.gov.ng/">
     <meta property="og:description" content="Nigeria's Official vaccination website">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png">
-    <meta property="twitter:image" content="https://res.cloudinary.com/moversng/image/upload/f_auto/v1625570907/intro_nphcda_l2ym5g.png"  />
-
+        <meta property="og:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png">
+        <meta property="twitter:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png"  />
 
 
 
