--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -195,7 +195,7 @@
 
 
                                                 </div>
-                                                <div class="col-8 text-left " style="padding-left: 15px"  >
+                                                <div class="col-8 text-left "  >
 
                                                     <span  class="h5 mb-0" >VALIDATION ID : [[${validatationinfo.getId()}]]</span>
                                                     <span  class="h5 mb-0" >SITE ID: [[${verifiedrecord.getSiteID()}]]</span>
