--- a/src/main/resources/templates/InvalidFaclity.html
+++ b/src/main/resources/templates/InvalidFaclity.html
@@ -3,10 +3,9 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-   
+    <title>COVID-19 Facility verification portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-       <title>COVID-19 verification portal</title>
     <meta property="og:title" content="NPHCDA COVID-19 Website">
     <meta property="og:site_name" content="Vaccination verification">
     <meta property="og:url" content="https://verification.vaccination.gov.ng/">
@@ -14,8 +13,6 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png">
     <meta property="twitter:image" content="https://verification.vaccination.gov.ng/img/intro_nphcda.png"  />
-
-
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -34,12 +31,14 @@
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+
+
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-15JGRP7GF5"></script>
     <script>
@@ -49,19 +48,17 @@
 
         gtag('config', 'G-15JGRP7GF5');
     </script>
-
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=616bfbb638f8310012c866ef&product=sticky-share-buttons' async='async'></script>
 </head>
 <body style="background-color: #007D53">
 <a id="start"></a>
-<div class="nav-container " style="background: white">
-    <div class="announcment" style="background-color: #007D53; color: #ffffff; text-align: center" >
-        <a href="tel:+2347002201122" class="hamburger-toggle" style="color: #ffffff; font-size: 15px">
+<div class="nav-container ">
+    <div class="announcment" style="background-color: #1b5636; color: #ffffff; text-align: center" >
+        <a href="tel:+2347002201122" class="hamburger-toggle" style="color: #ffffff; font-size: 15px" >
             <i class="material-icons" style="color: #ffffff; font-size: 15px">phone</i>
             Help Line : 0700 220 1122
         </a>
     </div>
-    <div class="bar bar--sm visible-xs" >
+    <div class="bar bar--sm visible-xs" style="background: white">
         <div class="container">
             <div class="row">
                 <div class="col-3 col-md-2">
@@ -71,7 +68,6 @@
                     </a>
                 </div>
                 <div class="col-9 col-md-10 text-right">
-
                     <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
                         <i class="icon icon--sm stack-interface stack-menu "  style="margin-top: 4px; font-size: 4.357143em; color: #0e262e"></i>
                     </a>
@@ -90,32 +86,9 @@
                         <a href="/">
                             <img class="logo logo-dark" alt="logo" src="img/logo_nphcda_main.svg" />
                             <img class="logo logo-light" alt="logo" src="img/logo_nphcda_main.svg" />
-
-
                         </a>
-
-
                     </div>
                     <!--end module-->
-                </div>
-
-                <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
-                    <div class="bar__module">
-
-                        <ul class="menu-horizontal text-left">
-                            <li style="border-bottom: 0.5px solid #28a745">
-                               <span class="text-dark"><a target="_blank" href="https://publicreg.vaccination.gov.ng/" style="text-underline: none; color: #28a745">Registration</a></span>
-
-                                <!--end dropdown container-->
-                            </li>
-                            <li style="border-bottom: 0.5px solid #28a745" >
-                                <span class="text-dark"> <a  href="/faq"  style="text-underline: none; color: #28a745" >FAQs </a></span>
-
-                                <!--end dropdown container-->
-                            </li>
-
-                        </ul>
-                    </div>
                 </div>
 
             </div>
@@ -130,45 +103,14 @@
         <div class="container pos-vertical-center">
             <div class="row">
                 <div class="col-md-12">
-
-                    <br/>
-
-                    <div class="feature feature-3 boxed boxed--lg" style="text-align: center">
-
-
-
-                        <h1> Vaccination verification portal</h1>
-                        <h3>
-                            Enter your vaccination ID to verify your status
-                        </h3>
+                    <h1 class="h1--large">INVALID</h1>
+                    <p class="lead">
+                        The facility you are looking for was NOT FOUND / INVALID
+                        TO report please  CONTACT/WHATSAPP <a class="lead" href="https://api.whatsapp.com/send?phone=+2347002201122">0700 220 1122</a>
+                    </p>
 
 
-                        <br/>
-
-                        <form  class="justify-content-center  row mx-0"  th:object="${verification}"  data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your email"
-                              th:action="@{/verify}"  method="GET"  >
-                            <div class="col-md-6">
-
-                                <input type="text" name="vackey" th:field="*{verificationID}" placeholder="NG-JGGW76232STD" onkeyup="this.value = this.value.toUpperCase();"  class="validate-required">
-
-
-                                <button  class="btn btn-lg btn-success btn-loading" type="submit" >
-
-
-                                    <span>Verify </span>
-                                </button>
-
-                            </div>
-
-
-
-
-                        </form>
-
-
-
-                    </div>
-                    <h3><a target="_blank" href="https://publicreg.vaccination.gov.ng/">Not Registered? Click here</a></h3>
+                    <a href="/">Go back to home page</a>
                 </div>
             </div>
             <!--end of row-->
@@ -183,6 +125,10 @@
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/smooth-scroll.min.js"></script>
 <script src="js/scripts.js"></script>
-
+<script>
+    $(window).load(function() {
+        $('#loading').hide();
+    });
+</script>
 </body>
 </html>
