--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -132,7 +132,7 @@
 
                                 <div class="card card-2 ">
 
-                                    <h4 class="text-center">THIS FACILITY IS ACCREDITED FOR COVID-19 VACCINATION </h4>
+                                    <h4 class="text-center">Rate your service at this facility</h4>
 
                                   <hr/>
 
@@ -159,9 +159,6 @@
 
 
                                                     <br/>
-
-                                                    <img alt="Image" th:src="${barcode}"  width="200px">
-
 
 
 
@@ -199,13 +196,30 @@
 
 
 
-                                 <div class="card__bottom text-center">
-
-                                        <!-- ShareThis BEGIN -->
-                                        <!-- ShareThis END -->
 
 
-                                    </div>
+
+
+                                    <div id="disqus_thread"></div>
+                                    <script>
+                                        /**
+                                         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                                         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                                        /*
+                                        var disqus_config = function () {
+                                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                                        };
+                                        */
+                                        (function() { // DON'T EDIT BELOW THIS LINE
+                                            var d = document, s = d.createElement('script');
+                                            s.src = 'https://nphcda-ict.disqus.com/embed.js';
+                                            s.setAttribute('data-timestamp', +new Date());
+                                            (d.head || d.body).appendChild(s);
+                                        })();
+                                    </script>
+                                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 
 
                                     <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
@@ -262,29 +276,6 @@
             </section>
         </div>
 
-        <!--<div class="modal-container" data-autoshow="500">-->
-            <!--<div class="modal-content">-->
-                <!--<div class="boxed boxed&#45;&#45;lg">-->
-                    <!--<h2>Notice</h2>-->
-                    <!--<hr class="short">-->
-                    <!--<p class="lead">-->
-                       <!--Visit your health facility to take your second dose. 12 weeks after first dose-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                       <!--visit a health facility to get immunized.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--visit a health facility to link your QR code.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--Detected QR Code conflicts.-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
 
 
         <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
