--- a/src/main/resources/templates/rating2.html
+++ b/src/main/resources/templates/rating2.html
@@ -132,7 +132,7 @@
 
                                 <div class="card card-2 ">
 
-                                    <h4 class="text-center">THIS FACILITY IS ACCREDITED FOR COVID-19 VACCINATION </h4>
+                                    <h4 class="text-center">Rate your service at this facility</h4>
 
                                   <hr/>
 
@@ -159,9 +159,6 @@
 
 
                                                     <br/>
-
-                                                    <img alt="Image" th:src="${barcode}"  width="200px">
-
 
 
 
@@ -199,14 +196,19 @@
 
 
 
-                                 <div class="card__bottom text-center">
-
-                                        <!-- ShareThis BEGIN -->
-                                        <!-- ShareThis END -->
 
 
-                                    </div>
 
+
+                                    <div id="hyvor-talk-view"></div>
+                                    <script type="text/javascript">
+                                        var HYVOR_TALK_WEBSITE = 5507;
+                                        var HYVOR_TALK_CONFIG = {
+                                            url: false,
+                                            id: false
+                                        };
+                                    </script>
+                                    <script async type="text/javascript" src="//talk.hyvor.com/web-api/embed.js"></script>
 
                                     <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
 
@@ -262,29 +264,6 @@
             </section>
         </div>
 
-        <!--<div class="modal-container" data-autoshow="500">-->
-            <!--<div class="modal-content">-->
-                <!--<div class="boxed boxed&#45;&#45;lg">-->
-                    <!--<h2>Notice</h2>-->
-                    <!--<hr class="short">-->
-                    <!--<p class="lead">-->
-                       <!--Visit your health facility to take your second dose. 12 weeks after first dose-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                       <!--visit a health facility to get immunized.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--visit a health facility to link your QR code.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--Detected QR Code conflicts.-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
 
 
         <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
