--- a/src/main/resources/templates/rating3.html
+++ b/src/main/resources/templates/rating3.html
@@ -132,7 +132,7 @@
 
                                 <div class="card card-2 ">
 
-                                    <h4 class="text-center">THIS FACILITY IS ACCREDITED FOR COVID-19 VACCINATION </h4>
+                                    <h4 class="text-center">Rate your service at this facility</h4>
 
                                   <hr/>
 
@@ -159,9 +159,6 @@
 
 
                                                     <br/>
-
-                                                    <img alt="Image" th:src="${barcode}"  width="200px">
-
 
 
 
@@ -199,13 +196,23 @@
 
 
 
-                                 <div class="card__bottom text-center">
-
-                                        <!-- ShareThis BEGIN -->
-                                        <!-- ShareThis END -->
 
 
-                                    </div>
+
+
+                                    <div id="mc-review"></div>
+                                    <script type="text/javascript">
+                                        cackle_widget = window.cackle_widget || [];
+                                        cackle_widget.push({widget: 'Rate your service at this facility', id: 78149});
+                                        (function() {
+                                            var mc = document.createElement('script');
+                                            mc.type = 'text/javascript';
+                                            mc.async = true;
+                                            mc.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cackle.me/widget.js';
+                                            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
+                                        })();
+                                    </script>
+                                    <a id="mc-link" href="http://cackle.me">Social reviews <b style="color:#4FA3DA">Cackl</b><b style="color:#F65077">e</b></a>
 
 
                                     <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
@@ -262,29 +269,6 @@
             </section>
         </div>
 
-        <!--<div class="modal-container" data-autoshow="500">-->
-            <!--<div class="modal-content">-->
-                <!--<div class="boxed boxed&#45;&#45;lg">-->
-                    <!--<h2>Notice</h2>-->
-                    <!--<hr class="short">-->
-                    <!--<p class="lead">-->
-                       <!--Visit your health facility to take your second dose. 12 weeks after first dose-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                       <!--visit a health facility to get immunized.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--visit a health facility to link your QR code.-->
-                    <!--</p>-->
-
-                    <!--<p class="lead">-->
-                        <!--Detected QR Code conflicts.-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
 
 
         <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
