--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -128,6 +128,10 @@
           <!--end bar-->
       </div>
         <div class="main-container" >
+
+
+
+
             <section class="imageblock switchable">
 
                 <div class="container" style="background-color: white; max-width: 1000px!important;">
@@ -136,9 +140,11 @@
 
 
 
+
                     <div class="row justify-content-md-center">
 
                           <div class="col-lg-6 col-md-7">
+
 
 
                             <div class="heading-block">
@@ -156,9 +162,9 @@
 
                                     <div class="boxed boxed--lg boxed--border">
                                         <div class="text-center">
-                                           <span class="label" style="background-color: #ffffff"> <i th:if="${verifiedrecord.displaydot() == true}" style="color: red"  class="material-icons">radio_button_checked</i></span>
+                                           <span class="label" style="background-color: #ffffff"> </span>
                                         </div>
-                                        <div class=" clearfix text-center">
+                                        <div class="clearfix text-center">
 
                                             <div class="row justify-content-md-center">
                                                 <div class="col"   >
@@ -166,14 +172,14 @@
                                                     <img alt="Image"  th:src="${barcode}" width="200px">
 
                                                 </div>
-                                                <div class="col-8 text-left mt-0" style="padding-left: 15px"  >
+                                                <div class="col-8 text-left mt-0" >
 
 
                                                     <span class="h5 mb-0" th:text="${verifiedrecord.getFamilyName().toUpperCase()} + ' ' + ${verifiedrecord.getOtherNames().toUpperCase()}"></span>
                                                     <span class="h5 mb-0">VAC ID: [[${verifiedrecord.getVaccinnationID()}]]</span>
 
-                                                    <span class="h5 mb-0">[[${verifiedrecord.getIdType()}]] NO : </span>
-                                                    <span class="h5 mb-0">SEX: [[${verifiedrecord.getGender}]]  |  DOB: [[${verifiedrecord.getDOB}]] </span>
+                                                    <span class="h5 mb-0">[[${verifiedrecord.getIdType()}]] NO : [[${verifiedrecord.getDocumentId()}]]  </span>
+                                                    <span class="h5 mb-0">SEX: [[${verifiedrecord.getGender}]]  |  DOB: [[${verifiedrecord.getDOB}]]  </span>
 
 
 
@@ -188,7 +194,7 @@
                                             </div>
                                             <br/>
 
-                                            <div th:if="${validatationinfo != null && verifiedrecord.displaydot() == true}" class="row justify-content-md-center">
+                                            <div th:if="${validatationinfo != null}" class="row justify-content-md-center">
                                                 <div class="col"   >
 
                                                     <img th:if="${verifiedimg != null}" alt="profile-image"  class="image--lg"  th:src="${verifiedimg}" th:style="'background:url(' + @{verified} + ');'" style="width: 140px;  border: 2px solid #006400; background-image: url('http://res.cloudinary.com/nphcdaict/image/upload/v1633926858/watermark_mvfiyj.png'); border: 2px solid green" >
@@ -218,7 +224,13 @@
 
 
 
+                                            <!--<a class="btn btn-sm btn-success btn&#45;&#45;icon" style="float: left" href="#" data-notification-link="newsletter-1">-->
+                                                <!--<span class="btn__text text-white"><i class="material-icons">edit</i>Update Info</span>-->
+                                            <!--</a>-->
+
+
                                         </div>
+
 
                                     </div>
 
@@ -448,6 +460,53 @@
             <!--</div>-->
         <!--</div>-->
 
+      <div class="notification pos-right pos-bottom col-md-4 col-lg-3" data-animation="from-bottom" data-notification-link="newsletter-1">
+          <div class="feature feature-1 text-center">
+
+              <div class="feature__body boxed boxed--lg boxed--border">
+                  <div class="modal-close modal-close-cross"></div>
+                  <div class="text-block">
+                      <h3>Update Bio Details</h3>
+                      <p>
+                          Enter the phone number you registered with to request access
+                      </p>
+                  </div>
+                  <form class="justify-content-left" th:object="${verifiedrecord}"   data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name, email address and agree to the terms.">
+                      <input class="validate-required"  th:field="*{vaccinationid}" type="text" disabled="true" style="font-size: 16px"  />
+                      <input class="validate-required validate-email" type="phone" name="EMAIL" placeholder="070635273232" style="font-size: 16px" />
+
+                      <button type="button" class="btn-sm btn-success type--uppercase">Request Access</button>
+                      <br/>
+
+
+
+                      <h6 class="text-left">Type of ID</h6>
+                      <div class="input-select">
+                          <select style="font-size: 16px">
+                              <option selected="" value="Default">Select An Option</option>
+                              <option value="nin">National ID (NIN)</option>
+                              <option value="dl">Driver's License</option>
+                              <option value="ip">International Passport</option>
+                              <option value="vc">Voters Card</option>
+                              <option value="ot">I don't have</option>
+                          </select>
+                      </div>
+
+                      <h5 class="text-left">ID Number</h5>
+                      <input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />
+
+
+                      <h5 class="text-left">Date Of Birth</h5>
+                      <input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />
+
+
+                      <img src="img/loading.gif" width="100px" alt="loading-icon">
+                  </form>
+              </div>
+              <div class="notification-close-cross notification-close-cross--circle notification-close"></div>
+          </div>
+          <!--end feature-->
+      </div>
 
         <a class="back-to-top inner-link" href="#start" data-scroll-class="100vh:active">
             <i class="stack-interface stack-up-open-big"></i>
