--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -471,37 +471,37 @@
                           Enter the phone number you registered with to request access
                       </p>
                   </div>
-                  <form class="justify-content-left" th:object="${verifiedrecord}"   data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name, email address and agree to the terms.">
-                      <input class="validate-required"  th:field="*{vaccinationid}" type="text" disabled="true" style="font-size: 16px"  />
-                      <input class="validate-required validate-email" type="phone" name="EMAIL" placeholder="070635273232" style="font-size: 16px" />
+                  <!--<form class="justify-content-left" th:object="${verifiedrecord}"   data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name, email address and agree to the terms.">-->
+                      <!--<input class="validate-required"  th:field="*{vaccinationid}" type="text" disabled="true" style="font-size: 16px"  />-->
+                      <!--<input class="validate-required validate-email" type="phone" name="EMAIL" placeholder="070635273232" style="font-size: 16px" />-->
 
-                      <button type="button" class="btn-sm btn-success type--uppercase">Request Access</button>
-                      <br/>
-
-
-
-                      <h6 class="text-left">Type of ID</h6>
-                      <div class="input-select">
-                          <select style="font-size: 16px">
-                              <option selected="" value="Default">Select An Option</option>
-                              <option value="nin">National ID (NIN)</option>
-                              <option value="dl">Driver's License</option>
-                              <option value="ip">International Passport</option>
-                              <option value="vc">Voters Card</option>
-                              <option value="ot">I don't have</option>
-                          </select>
-                      </div>
-
-                      <h5 class="text-left">ID Number</h5>
-                      <input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />
+                      <!--<button type="button" class="btn-sm btn-success type&#45;&#45;uppercase">Request Access</button>-->
+                      <!--<br/>-->
 
 
-                      <h5 class="text-left">Date Of Birth</h5>
-                      <input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />
+
+                      <!--<h6 class="text-left">Type of ID</h6>-->
+                      <!--<div class="input-select">-->
+                          <!--<select style="font-size: 16px">-->
+                              <!--<option selected="" value="Default">Select An Option</option>-->
+                              <!--<option value="nin">National ID (NIN)</option>-->
+                              <!--<option value="dl">Driver's License</option>-->
+                              <!--<option value="ip">International Passport</option>-->
+                              <!--<option value="vc">Voters Card</option>-->
+                              <!--<option value="ot">I don't have</option>-->
+                          <!--</select>-->
+                      <!--</div>-->
+
+                      <!--<h5 class="text-left">ID Number</h5>-->
+                      <!--<input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />-->
 
 
-                      <img src="img/loading.gif" width="100px" alt="loading-icon">
-                  </form>
+                      <!--<h5 class="text-left">Date Of Birth</h5>-->
+                      <!--<input class="validate-required validate-email" type="text"  placeholder="070635273232" style="font-size: 16px" />-->
+
+
+                      <!--<img src="img/loading.gif" width="100px" alt="loading-icon">-->
+                  <!--</form>-->
               </div>
               <div class="notification-close-cross notification-close-cross--circle notification-close"></div>
           </div>
