--- a/src/main/resources/templates/healthfacility.html
+++ b/src/main/resources/templates/healthfacility.html
@@ -39,7 +39,22 @@
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.1.2/css/star-rating.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -198,14 +213,6 @@
 
 
 
-
-                                 <div class="card__bottom text-center">
-
-                                        <!-- ShareThis BEGIN -->
-                                        <!-- ShareThis END -->
-
-
-                                    </div>
 
 
                                     <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
