--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -42,6 +42,17 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" rel="stylesheet">
 
 
+        <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+
+        <!-- optionally if you need to use a theme, then include the theme file as mentioned below -->
+        <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/themes/krajee-svg/theme.css" media="all" rel="stylesheet" type="text/css" />
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/js/star-rating.js" type="text/javascript"></script>
+
+
+
+
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-15JGRP7GF5"></script>
@@ -55,6 +66,9 @@
 
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=616bfbb638f8310012c866ef&product=sticky-share-buttons" async="async"></script>
         <style>
+            .caption{
+                display: none!important;
+            }
             .pending{
                 background-color: darkred;
                 color: #ffffff;
@@ -130,6 +144,14 @@
 
 <br/><br/><br/>
 
+
+                              <div th:if="${saved!=null}" class="alert bg--success">
+                                  <div class="alert__body">
+                                      <span>Thank you for your feedback</span>
+                                  </div>
+                                  <div class="alert__close">×</div>
+                              </div>
+
                                 <div class="card card-2 ">
 
                                     <h4 class="text-center">Rate your service at this facility</h4>
@@ -200,29 +222,41 @@
 
 
 
-                                    <div id="disqus_thread"></div>
-                                    <script>
-                                        /**
-                                         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                                         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-                                        /*
-                                        var disqus_config = function () {
-                                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-                                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                                        };
-                                        */
-                                        (function() { // DON'T EDIT BELOW THIS LINE
-                                            var d = document, s = d.createElement('script');
-                                            s.src = 'https://nphcda-ict.disqus.com/embed.js';
-                                            s.setAttribute('data-timestamp', +new Date());
-                                            (d.head || d.body).appendChild(s);
-                                        })();
-                                    </script>
-                                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+                                    <form th:if="${saved==null}"   th:action="@{/rate}"  method="post" th:object="${rating}" class="mt-5">
+
+                                        <input value="1" type="hidden" required="true" class="rating"
+                                               th:field="*{stars}">
+
+
+                                        <label>Name</label>
+                                        <input type="text" th:field="*{name}" name="email" required="true" style="font-size: 15px" placeholder="" class="validate-required">
+
+                                        <label>Email</label>
+                                        <input type="email" th:field="*{email}" name="email" required="true" style="font-size: 15px" placeholder="" class="validate-required">
+
+
+                                        <input type="text" th:field="*{state}" hidden="true" name="email" required="true" style="font-size: 15px" placeholder="" class="validate-required">
+
+                                        <input type="text" th:field="*{facilityname}" hidden="true" name="email" required="true" style="font-size: 15px" placeholder="" class="validate-required">
+
+
+                                        <input type="text" th:field="*{facilityid}" hidden="true" name="email" required="true" style="font-size: 15px" placeholder="" class="validate-required">
+
+                                        <label>Message</label>
+                                        <textarea name="message" th:field="*{comment}" required="true" style="font-size: 15px" placeholder="Message" class="validate-required" rows="4"></textarea>
+                                        <br/>
+                                        <button  class="btn btn-success" type="submit">Submit review</button>
+
+                                        <span class="type--fade" >Confidentiality is guaranteed </span>
+                                    </form>
+
+
+                                    <br/>
 
 
 
-                                    <span class="type--fade" >Issued By: National Primary Health Care Development Agency, Nigeria</span>
+                                    <br/>
 
 
 
@@ -284,6 +318,8 @@
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/scripts.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.1.2/js/star-rating.min.js"></script>
+
 
     </body>
 </html>
